Fixed overflow and scrolling issues with default template.

--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,12 @@
 body {
 	font: 14px/20px Arial, "Helvetica Neue", sans-serif;
 	color: #333;
-}
-
-div#wrapper {
-	margin: 0 auto;
-	postion: absolute;
+	border: 0 none;
+    height: 100%;
+    margin: 0;
+    max-height: 100%;
+    overflow: hidden;
+    padding: 0;
 }
 
 h1 {
@@ -55,6 +56,8 @@ a:visited {
 
 p {
 	margin: 10px 0px;
+	min-width: 700px;
+	max-width: 800px;
 }
 
 p a {
@@ -75,19 +78,35 @@ blockquote {
 	border-left: 2px dashed #ddd;
 }
 
-div#post-list {
+div#post-content {
+	position: absolute;
+	left: 251px;
+	top: 0px;
+	bottom: 0px;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-top: 20px;
+	overflow: auto;
+}
+
+div#sidebar {
 	width: 230px;
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	bottom: 0px;
 	margin-left: 10px;
 	padding-top: 20px;
 	padding-right: 10px;
-	position: fixed;
-	top: 0;
-	left: 0;
-	bottom: 0;
 	border-right: 2px solid #ddd;
 }
 
-div#post-list ul {
+div#post-list {
+	position: absolute;
+	left: 0px;
+	top: 50px;
+	bottom: 20px;
+	overflow: auto;
 	margin-top: 20px;
 }
 
@@ -95,7 +114,7 @@ div#post-list ul li {
 	margin-bottom: 7px;
 }
 
-div#post-list span#rss a {
+div#sidebar span#rss a {
 	display: block;
 	width: 23px;
 	height: 23px;
@@ -106,37 +125,29 @@ div#post-list span#rss a {
 	left: 180px;
 }
 
-div#post-list span#rss a:hover {
+div#sidebar span#rss a:hover {
 	background: url('/images/rss_icon_o.png') no-repeat;
 	opacity: 0.75;
 }
 
-div#post-list #footer {
-	position: fixed;
+#footer {
+	position: absolute;
 	bottom: 0;
+	height: 15px;
+	padding-left: 5px;
 	padding-bottom: 10px;
 	font-size: 12px;
 	color: #999;
 	background: #fff;
 }
 
-div#post-list #footer a {
+div#sidebar #footer a {
 	color: #999;
 	border-bottom: 1px dotted #999;
 }
 
-div#post-list #footer a:hover {
+div#sidebar #footer a:hover {
 	text-shadow: #bbb 1px 1px 1px;
-}
-
-div#post-content {
-	margin-left: 250px;
-	padding-left: 20px;
-	padding-right: 20px;
-	padding-top: 20px;
-	min-width: 700px;
-	max-width: 800px;
-	height: 100%;
 }
 
 span.timestamp {
